syntax = "proto3";
package OpenIMServer.push;
import "sdkws/sdkws.proto";
option go_package = "github.com/OpenIMSDK/Open-IM-Server/pkg/proto/push";

message PushMsgReq {
  sdkws.MsgData msgData = 1;
  string conversationID = 2;
}

message PushMsgResp{
}

message DelUserPushTokenReq{
  string userID = 1;
  int32 platformID = 2;
}

message DelUserPushTokenResp{
}

service PushMsgService {
  rpc PushMsg(PushMsgReq) returns(PushMsgResp);
  rpc DelUserPushToken(DelUserPushTokenReq) returns(DelUserPushTokenResp);
}

